# ChangeLog for dev-ruby/coderay
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.68 2013/04/05 18:24:50 ago Exp $

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> coderay-1.0.9.ebuild:
  Stable for ppc64, wrt bug #464366

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> coderay-1.0.9.ebuild:
  Stable for ppc, wrt bug #464366

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> coderay-1.0.9.ebuild:
  Stable for x86, wrt bug #464366

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> coderay-1.0.9.ebuild:
  Stable for amd64, wrt bug #464366

*coderay-1.0.9 (28 Feb 2013)

  28 Feb 2013; Hans de Graaff <graaff@gentoo.org> +coderay-1.0.9.ebuild:
  Version bump.

  28 Feb 2013; Hans de Graaff <graaff@gentoo.org> -coderay-1.0.0.ebuild,
  -coderay-1.0.7.ebuild:
  Cleanup.

  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> coderay-1.0.6.ebuild:
  Stable for HPPA (bug #427594).

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> coderay-0.9.8.ebuild,
  coderay-1.0.0.ebuild, coderay-1.0.6.ebuild, coderay-1.0.7.ebuild,
  coderay-1.0.8.ebuild:
  alpha/ia64/sparc stable wrt #427594, add ~alpha

*coderay-1.0.8 (18 Oct 2012)

  18 Oct 2012; Hans de Graaff <graaff@gentoo.org> +coderay-1.0.8.ebuild:
  Version bump.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  09 Aug 2012; Anthony G. Basile <blueness@gentoo.org> coderay-1.0.6.ebuild:
  Stable ppc, bug #427594

  09 Aug 2012; Anthony G. Basile <blueness@gentoo.org> coderay-1.0.6.ebuild:
  Stable ppc64, bug #427594

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org> coderay-1.0.6.ebuild:
  Stable for amd64, wrt bug #427594

  22 Jul 2012; Jeff Horelick <jdhore@gentoo.org> coderay-1.0.6.ebuild:
  marked x86 per bug 427594

  22 Jul 2012; Hans de Graaff <graaff@gentoo.org> -coderay-0.9.6.ebuild,
  -coderay-1.0.4.ebuild, -coderay-1.0.5.ebuild:
  Remove old versions.
