@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST coderay-0.9.8.gem 97792 SHA256 1522e8b2d73dfead95d7f195dce63411c59b4b7cb120c6589d6474ccf207d38c SHA512 32443a817cb7bc37560e5826b9d9f8e0a7846a9687e39df22823f5f53671e42c3239102336aeb1126f848b62af4028c70d85279705cfb1ee465f9ff380a8f8ef WHIRLPOOL 871f02f0e6958a7825ce32e2ede0b00e6b2800aeecac3f7938e8b4233eecfd87433c052c7b732fcc29d6f3a497b9bff6fefe688de51ae1f7aa12711396586960
 DIST coderay-1.0.6.tgz 907350 SHA256 6a79d60240a87416fc7b001dd792d9ad11bdee6a8fbc145a829ae79b85d484c4 SHA512 3f6ed6fb6ae7e14bedffe184b965f204227cd8a9be693e6e71139c44b554d907b93dbe7e4b06682cd5593c305cea7c434c1ca9eff5396958342900b9bb895fba WHIRLPOOL 595061098523bbe5197b52b285b1905cbeb7650d2fc296c9e4ea2634e81a46906b07d583431ba0cbe63cd1f55a12599e797e3eba3f8ed7a68ca3d0a6f0079721
@@ -8,23 +8,13 @@ DIST coderay-1.0.9.tgz 249169 SHA256 4dc6f49cfa3428149e6fd80aa14b5a1efc5210e35dd
 EBUILD coderay-0.9.8.ebuild 933 SHA256 ee230c4f1377b6ff56783e6c08a052192fb5f3c5f9081b07707cf32ad7271b32 SHA512 d49ac1ca724393b371efcef0c1d7457d2f20f6f4b3c3a9b9e1785c773d6ebda21e3cb3b1e5bd00badfa73ba2ac04ef901fee2d188843ca5969797e0adae68ba9 WHIRLPOOL b2f2e4602f8be96276c081ed30b236dcda8b5a3a5baa81a916f577fc2d1acd54865057a68a1ea7b4303495c81ec82783db0ffa9e19231972c6659817cb384aee
 EBUILD coderay-1.0.6.ebuild 1394 SHA256 2441d99b7044ae93ca616837c7c05ba3899ee533b6ad22cf2fb0d00104698622 SHA512 8d59f3789072d964ceab96957063feeacc51222608afb51720e6bcb3e65fcf3672dddcc125b3519022aeec0733e836049f0f5b8624948f37247a530febceeec3 WHIRLPOOL d294c00a5b8a8388ead5546da480828f02449cc4af387268ef7df4fe21afb40e7793c49fb795a84fd2f3dd361b4fa2b67738a461058f3cc5667f7bc9669d7749
 EBUILD coderay-1.0.8.ebuild 1412 SHA256 ebc3f206ca38308f0242189ab89889c8d440a379a89c4e952d2358b3bfc5c27d SHA512 490513dc7a65742bad7c7c5751d3c866a6057a96520274fa8e62a7b79f03d2a54b019a0aab3e3e717bb4b29862d75c179cc1a7d8caca2fc58059eec5197d05d0 WHIRLPOOL 7f571410bce86528c153d3f9c9a136924de8b2cefbd5baef76e4f7df09372f671a21183b3c041a03ba3197855c896f58c1e30b2393877f8010806db839443f4a
-EBUILD coderay-1.0.9.ebuild 1404 SHA256 309c400eae0e1b9c94956c6a95fd7f805174b0e817efa5a8ad688fc82b868339 SHA512 66a7d774e6f00562c4914c06b9d6dff2d25878b38d6eac675a61c4a371687c5f43307ee1b9f8b9054a1d09ebfcbdf1d0f3d63fb167204ba0dcda803e0c5ae75a WHIRLPOOL a03d6985ddc6c0da8d33c3ca303cb139d1990892a7dfb1cc4b1ac6a9ef756f0eedc0479912dbace95d129d0a598a8fa4d92bfa1f5d8291adb92087a8025b73ae
-MISC ChangeLog 8844 SHA256 c7330c266f0e6cecda9f331d5c207ffc3d8adaece65b59b386f7cd9c5b73d913 SHA512 3b1f4b32fe741719fd3f142eb2abd1726ab2fd6f74257cfa04c3f1bb49eff7beb4283586ea55002e1f2eb2b380008e18d6639a3438c4b945e4a5f03dd452c856 WHIRLPOOL 7527e605ad1c16256117853709fb035285133f34fa022a9f2f2d5e872d0e4669346fd848742b20d4d7cc934361a9db8eaafa19fcd4393f0e12527e1f245ce9c8
+EBUILD coderay-1.0.9.ebuild 1403 SHA256 631241ac9f8dd39d186d4a71e6c352778454dd3cebc07c6552da098290f3547d SHA512 47dccf52228a334eedb5fdef7ae3cbfbad59208504890176c57c6a4919ded81248d503939885adee920e487a4bff02a1fe600c44e794a9f456d9b34546dc6bfe WHIRLPOOL f22331ed854932d33214a390323e15821a022f9c42672477b3bd3e4a38c2226c64d8ec6dfd7e203f145c2d0b9d9b37413c93cb4f73d550cbed6748451fd7edb3
+MISC ChangeLog 8947 SHA256 5cb43c5dae0137e57ec92015267991101b9d6e1e6391734ab6d99a5a36d60781 SHA512 ab374a63f40b18e9a39b74c14bcae66156f8195ce27afd8e046c6b1a8ba1592b53937ef8f1fe3eb9ffd04fe9dd175be68beb6607f5e9bbbe17ca49df914db8dd WHIRLPOOL 5d3b3bc5ac59f88e4b96e877ecb149269f75856721ce1c0f9d8b186f080d166ed7dd70d643f637873b5a8d26888edea8926e4615e254d36fa306721702678669
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRXxZdAAoJELp701BxlEWfnOIP/1IvDG5iOOzAH/IoKLufl0Ps
-r5Ye1LJ/S1w4//qH79B+BRnv/wR+Rp2mk+hLpwcI6CpaNhJTvQAbsbiZBlIXRQe9
-M0T/Kx89JA0WoQ2L2ozYBOnBB6ghRFfJ3h6tKuXXYL/P2a8H8PuwWTEBpXau+0Sn
-Evp5SEank7XSOc+cfkL1yAexR7+U5Gj63iIr5S5HQ2+Z01SmNl5BiUiJU4VkoHx/
-/chzaN4CWU7/h+ENambouJpx1sqqB3fldfyHlloP6jhpqViBzXYKwT+YFLBYfETD
-VLEYhkGB0QYr0JG9zqWBEVij14/SdR3iFK2tlPzbAQ9d/DPZjKauoemnAcR1KMId
-nsguzNQOkZ3lMk+bdWkL/STiNrRu2MQnTuiRpAXXY0r5/PT1NBKyfvCuryEpWVFg
-eYxUTGrhMlW/EkvtFsWeVhbcdXMIfzxzwB3BhuJyM/GlXWN3IVk7k53bDGwSt9c6
-kFBkt4x6Z3J/JFLprJFDdMya+MxogH8HuKaISJplAQUrF9tgOdLgY7SWFWTZK9E4
-/tt1Sv8xB+G866jA7g8TBsSewVHCelllzS1BqBQSZzfAbsliWakEQw4x9P48RyJn
-ABMCgvtrL7QmVMcRr7uDHfvFm7J+qAdJAbsjPbhT5eDISx+16BtQ0QSut6su9bao
-+niruDVLvc2d6j2CZmPx
-=DGZE
+iEYEAREIAAYFAlFmqUQACgkQVWmRsqeSphOE0wCfbFaQae8Y5kZCLQ6TeP3it8Px
+9FEAnAtVLPX4y979kfN2LuN3OPtmsqpI
+=gpfl
 -----END PGP SIGNATURE-----
