@@ -9,13 +9,13 @@ EBUILD json-1.6.7.ebuild 1981 SHA256 4968ab9d7bb7ef9eb1cff6cccc635ecb9089d3daa19
 EBUILD json-1.6.8.ebuild 1982 SHA256 01a927c37523bd075c784d23dd220eb441a624edd5dba105c9f77df4faa9a25e SHA512 47a4110ebeb74eb0af0f6125aacf6d36a71f299f0eef1a432299454e99bbe553ace49d6ac1922357b439c82675022ca0240f78441db4d60153dbb3f0db05bdc2 WHIRLPOOL 95ff7f0cdcee79650695b35dac919146869b67319ec61199046f3059cd1a9667c4489e1fb2959c0967e7f88cdd0500aa3e8a479aa89b6e3dfde27731df958fab
 EBUILD json-1.7.6.ebuild 2009 SHA256 0253e2df6b3687ed7203df127b4d0803166807020edbcf887865d57c97b45d80 SHA512 e2dcf4c211d56acee786f40ca863b9e22ab2af35b0aafce38dc711d0d0b6aa311be12292b664b720a82f6c9ad8038771b71de4c8ad65ef27bb21afaabb2717ee WHIRLPOOL fe9b681c22f603dcc58a4ca9d1a470b779189e091f2d676f85ffb9064432f11134f94d54b8c954a1c3784d23c5204f0af6f7c580a6860b9c9b67d91a3dd2d8a8
 EBUILD json-1.7.7-r1.ebuild 2146 SHA256 d45278d30740b3cefff705740f7fb954e20bb2d13e80f712f6e9f64157102407 SHA512 f48a9f528be1328a64b8c12cd4de74ecc050bb8458e764d18c246f650c762602fd332686f660fbfbc717b95c8a588f2e339dbd1059fb86b2697bbaadaa999781 WHIRLPOOL 7db21419888209353d8bbb3a2846a81384f89387e0f2503834b90dab86b9ccd8aee4e0c03a94df5df918e76a42fbcbe08305ef980cda274a0dc9cff79266fb0f
-EBUILD json-1.7.7.ebuild 1999 SHA256 f14e5fca00dca514d77dc45e5a7b1a25c1595291af55ce7eb6ddfd406ef75dd5 SHA512 1b594bba58b26cba91f91baf3c810ba30ac9cffb152905e19156a4dd5092fe0be97d04af7d8581318e37d4f1bce6d56a115b6a292eafe33c6bf01ede8e49a950 WHIRLPOOL de16968722029b4178dfa0544c9696a0792eef04ce0bdccc673912983a0d2727262d312a92816da646b575657e3a133acb4f1c3a1166b45346184d2bc6605512
-MISC ChangeLog 15179 SHA256 a0dc30f4dc7a44116716087c2a8354b601762463c2087ddfd4e11a39a45df89b SHA512 87d5faeac3b7c5a688da0065bf82978527bd5a8db5527575eefd1379c7b08f60c010577dbb7953876b9e6f950505546c9f199b3f5934d909b388db1db39ee94e WHIRLPOOL a2e59effa090af06ba7aaf7039af5f07da748c9f746b9eda41afbb13b335dd54aee8eb51c45f192fa30aa0ae2eb728499b14a70fd196c4064936da94a651fc9f
+EBUILD json-1.7.7.ebuild 1998 SHA256 79662f4399e692a5ad8f22776e720256a906aa813f478bc138392d72c35ac368 SHA512 bbfec1160f49774e9a18e1b38f92d4bf11325a0a9960104208e4b67722e1267542033bc90556b55d6866bb9acbb18a0af67e2fab57f3bb789d61797031aadd40 WHIRLPOOL f53e6ed3e88b03c1139f8fc8b49bf92ec9a8e8b8d53424779f5892f79ab2ef9235e2d5c9a9a78973d952df42e3147611642b8903b427dddca6778996b147e303
+MISC ChangeLog 15276 SHA256 57a0043b9aa5db7a448245acb48652970f8c4427b4879c70e86a8b94475a5ec8 SHA512 d148b323fa9cce1a94a17072b7294544908d14a2c93add2e0c62ca302de2f32ca2009e752da6a917dcd1a8e17ac7adace2790605ee1f9ae7c77bed70473a7de8 WHIRLPOOL bdc1c265c724d432db14b5ed16d3ef8046a34f0895da7d2531a027ba61db113f76f4559f227d262a163ec582b80a069711e31a1ea32d02cad844116670b6f717
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlFkUU4ACgkQiIP6VqMIqNeyxAD/QQJ9PPfxNGjuxr0Ubp8l1wrp
-e0uuv5CE47bSIiB3/EEA/RVxj97xljrRvatrkKuXUh4BV2aDEc3/Pyqr7FO3Q4kt
-=Rwet
+iEYEAREIAAYFAlFmqYgACgkQVWmRsqeSphM5uACcDbADr7dPSG1OoRPbmrBI2ORQ
+L90An2DuBMk17BjUbsWX1Mp0ls5WT/w8
+=g2L9
 -----END PGP SIGNATURE-----
