@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/json
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/json/ChangeLog,v 1.121 2013/04/09 17:35:04 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/json/ChangeLog,v 1.122 2013/04/11 12:16:06 jer Exp $
+
+  11 Apr 2013; Jeroen Roovers <jer@gentoo.org> json-1.7.7.ebuild:
+  Stable for HPPA (bug #464366).
 
 *json-1.7.7-r1 (09 Apr 2013)
 
